javadoc includes in all archives

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,10 @@
 app.title=Hoja de Rol
+app.title.principal=Hoja de Rol
 navigation.toggle=Navegación
 navigation.home=Inicio
 navigation.entities=Entidades
 home.index.headline=Bienvenido a la creación de hojas de rol más básica y chustera del mundo\!
-home.index.exploreEntities=Explora tus entidades
+home.index.exploreEntities=Explora tus personajes creados
 error.message=Esta página no está disponible.
 clases.list.headline=Personajes
 clases.list.createNew=Crear un nuevo Personaje
@@ -25,7 +26,7 @@ clases.suerte.label=Suerte
 clases.raza.label=Raza
 clases.armas.label=Armas
 clases.habilidades.label=Habilidades
-clases.edit.headline=Editar Clases
+clases.edit.headline=Editar
 clases.edit.back=Volver a la lista
 clases.create.success=El personaje ha sido creado.
 clases.update.success=El personaje ha sido editado.
