--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ navigation.entities=Entidades
 home.index.headline=Bienvenido a la creación de hojas de rol más básica y chustera del mundo\!
 home.index.exploreEntities=Explora tus personajes creados
 error.message=Esta página no está disponible.
-clases.list.headline=Personajes
+clases.list.headline=Click aquí
 clases.list.createNew=Crear un nuevo Personaje
 clases.list.empty=No se han encontrado personaje.
 clases.list.edit=Editar
