--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ home.index.headline=Bienvenido a la creación de hojas de rol más básica y chu
 home.index.exploreEntities=Explora tus personajes creados
 error.message=Esta página no está disponible.
 clases.list.headline=Click aquí
+clases.list.headline.clases=Mis personajes
 clases.list.createNew=Crear un nuevo Personaje
 clases.list.empty=No se han encontrado personaje.
 clases.list.edit=Editar
